[gd_scene load_steps=5 format=3 uid="uid://j2yba41vvm7h"]

[ext_resource type="Script" path="res://Script/StartScreen.gd" id="1_hv64o"]
[ext_resource type="Texture2D" uid="uid://c7qkj1iupf2y4" path="res://Art/Images/StartScreenPic.png" id="2_puka8"]
[ext_resource type="Theme" uid="uid://bmro6d22jkcf1" path="res://Art/Resources/StartTheme.tres" id="3_lxvur"]
[ext_resource type="AudioStream" uid="uid://3sawvwrs3rq5" path="res://Music/Opening.mp3" id="3_vbxai"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hv64o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_puka8")
expand_mode = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 274.0
offset_right = 618.0
offset_bottom = 316.0
theme = ExtResource("3_lxvur")
text = "Start"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 647.0
offset_top = 274.0
offset_right = 805.0
offset_bottom = 316.0
theme = ExtResource("3_lxvur")
text = "Quit"

[node name="HelpButton" type="Button" parent="."]
layout_mode = 0
offset_left = 276.0
offset_top = 274.0
offset_right = 434.0
offset_bottom = 316.0
theme = ExtResource("3_lxvur")
text = "Help"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vbxai")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
